--- a/portfolio.html
+++ b/portfolio.html
@@ -302,8 +302,8 @@
               </li>
             </ul>
           </address>
-        </div>
-        <div class="footer-container-list">
+        </div>            
+        <div >
           <p class="section-title footer-title">приєднуйтесь</p>
           <ul class="footer-soc-list">
             <li class="footer-soc-item">
@@ -335,6 +335,21 @@
               </a>
             </li>
           </ul>
+        </div>
+        <div class="subscribe">
+          <p class="subscribe-text">Підпишіться на розсилку</p>
+          <div class="subscribe-wrap">
+            <input type="email" 
+            class="subscribe-input" 
+            name="email" 
+            id="email"
+            placeholder="E-mail">
+            <!-- <label for="email" class="subscribe-label">E-mail</label> -->
+            <button type="submit" class="subscribe-button">Підписатися
+              <svg class="subscribe-icon" width="24" height="24">
+              <use href="./image/icons.svg#icon-send"></use>
+            </svg></button>
+          </div>
         </div>
       </div>
     </footer>
