--- a/portfolio.html
+++ b/portfolio.html
@@ -96,7 +96,7 @@
             </li>
             <li class="examples-item">
               <a href="#" class="examples-link">
-               <div class="examples-link-wrapper">
+                <div class="examples-link-wrapper">
                   <img
                     src="./image/poster.jpg"
                     alt="poster New Orlean vs Golden Star"
@@ -110,7 +110,7 @@
                       особу.
                     </p>
                   </div>
-               </div>
+                </div>
                 <div class="wrapper">
                   <h2 class="examples-title">
                     Постер New Orlean vs Golden Star
@@ -121,7 +121,7 @@
             </li>
             <li class="examples-item">
               <a href="#" class="examples-link">
-               <div class="examples-link-wrapper">
+                <div class="examples-link-wrapper">
                   <img
                     src="./image/seafood.jpg"
                     alt="restaurant seafood"
@@ -135,7 +135,7 @@
                       особу.
                     </p>
                   </div>
-               </div>
+                </div>
                 <div class="wrapper">
                   <h2 class="examples-title">Ресторан Seafood</h2>
                   <p class="examples-type">Додаток</p>
@@ -145,8 +145,11 @@
             <li class="examples-item">
               <a href="#" class="examples-link">
                 <div class="examples-link-wrapper">
-                  <img src="./image/prime.jpg" 
-                  alt="project prime" width="370" />
+                  <img
+                    src="./image/prime.jpg"
+                    alt="project prime"
+                    width="370"
+                  />
                   <div class="examples-link-owerlay">
                     <p class="owerlay-text">
                       Ресурс пропонує комплексні пропозиції з різним рівнем
@@ -165,8 +168,11 @@
             <li class="examples-item">
               <a href="#" class="examples-link">
                 <div class="examples-link-wrapper">
-                  <img src="./image/boxes.jpg" 
-                  alt="project boxes" width="370" />
+                  <img
+                    src="./image/boxes.jpg"
+                    alt="project boxes"
+                    width="370"
+                  />
                   <div class="examples-link-owerlay">
                     <p class="owerlay-text">
                       Ресурс пропонує комплексні пропозиції з різним рівнем
@@ -208,7 +214,7 @@
             </li>
             <li class="examples-item">
               <a href="#" class="examples-link">
-               <div class="examples-link-wrapper">
+                <div class="examples-link-wrapper">
                   <img
                     src="./image/limited-idition.jpg"
                     alt="limited-idition"
@@ -222,7 +228,7 @@
                       особу.
                     </p>
                   </div>
-               </div>
+                </div>
                 <div class="wrapper">
                   <h2 class="examples-title">Видання Limited Edition</h2>
                   <p class="examples-type">Дизайн</p>
@@ -232,8 +238,7 @@
             <li class="examples-item">
               <a href="#" class="examples-link">
                 <div class="examples-link-wrapper">
-                  <img src="./image/lab.jpg" 
-                  alt="project lab" width="370" />
+                  <img src="./image/lab.jpg" alt="project lab" width="370" />
                   <div class="examples-link-owerlay">
                     <p class="owerlay-text">
                       Ресурс пропонує комплексні пропозиції з різним рівнем
@@ -302,8 +307,8 @@
               </li>
             </ul>
           </address>
-        </div>            
-        <div >
+        </div>
+        <div>
           <p class="section-title footer-title">приєднуйтесь</p>
           <ul class="footer-soc-list">
             <li class="footer-soc-item">
@@ -339,21 +344,23 @@
         <div class="subscribe">
           <p class="subscribe-text">Підпишіться на розсилку</p>
           <div class="subscribe-wrap">
-            <input type="email" 
-            class="subscribe-input" 
-            name="email" 
-            id="email"
-            placeholder="E-mail">
+            <input
+              type="email"
+              class="subscribe-input"
+              name="email"
+              id="email"
+              placeholder="E-mail"
+            />
             <!-- <label for="email" class="subscribe-label">E-mail</label> -->
-            <button type="submit" class="subscribe-button">Підписатися
+            <button type="submit" class="subscribe-button">
+              Підписатися
               <svg class="subscribe-icon" width="24" height="24">
-              <use href="./image/icons.svg#icon-send"></use>
-            </svg></button>
+                <use href="./image/icons.svg#icon-send"></use>
+              </svg>
+            </button>
           </div>
         </div>
       </div>
     </footer>
-    
-    </div>
   </body>
 </html>
