--- a/index.html
+++ b/index.html
@@ -441,20 +441,22 @@
         <div class="subscribe">
           <p class="subscribe-text">Підпишіться на розсилку</p>
           <div class="subscribe-wrap">
-            <input
-              type="email"
-              class="subscribe-input"
-              name="email"
-              id="email"
-              placeholder="E-mail"
-            />
-            <!-- <label for="email" class="subscribe-label">E-mail</label> -->
-            <button type="submit" class="subscribe-button">
-              Підписатися
-              <svg class="subscribe-icon" width="24" height="24">
-                <use href="./image/icons.svg#icon-send"></use>
-              </svg>
-            </button>
+            <form class="subscribe-form">
+              <input
+                type="email"
+                class="subscribe-input"
+                name="email"
+                id="email"
+                placeholder="E-mail"
+              />
+              <!-- <label for="email" class="subscribe-label">E-mail</label> -->
+              <button type="submit" class="subscribe-button">
+                Підписатися
+                <svg class="subscribe-icon" width="24" height="24">
+                  <use href="./image/icons.svg#icon-send"></use>
+                </svg>
+              </button>
+            </form>
           </div>
         </div>
       </div>
@@ -501,7 +503,7 @@
             </div>
           </div>
           <div class="modal-fill">
-            <lable for="email" class="modal-lable">Пошта</lable>
+            <lable for="form-email" class="modal-lable">Пошта</lable>
             <div class="modal-wrap">
               <input
                 type="email"
@@ -509,7 +511,7 @@
                 name="user-email"
                 placeholder=" "
                 required
-                id="email"
+                id="form-email"
               />
               <svg width="18" height="18" class="modal-icon">
                 <use href="./image/icons.svg#icon-email"></use>
