--- a/portfolio.html
+++ b/portfolio.html
@@ -344,20 +344,22 @@
         <div class="subscribe">
           <p class="subscribe-text">Підпишіться на розсилку</p>
           <div class="subscribe-wrap">
-            <input
-              type="email"
-              class="subscribe-input"
-              name="email"
-              id="email"
-              placeholder="E-mail"
-            />
-            <!-- <label for="email" class="subscribe-label">E-mail</label> -->
-            <button type="submit" class="subscribe-button">
-              Підписатися
-              <svg class="subscribe-icon" width="24" height="24">
-                <use href="./image/icons.svg#icon-send"></use>
-              </svg>
-            </button>
+            <form class="subscribe-form">
+              <input
+                type="email"
+                class="subscribe-input"
+                name="email"
+                id="email"
+                placeholder="E-mail"
+              />
+              <!-- <label for="email" class="subscribe-label">E-mail</label> -->
+              <button type="submit" class="subscribe-button">
+                Підписатися
+                <svg class="subscribe-icon" width="24" height="24">
+                  <use href="./image/icons.svg#icon-send"></use>
+                </svg>
+              </button>
+            </form>
           </div>
         </div>
       </div>
